# SectoredLang

./: .editorconfig  .gitignore  .gitmodules  Bootstrap.Windows.bat  ExampleFile.lar  ExampleFile.mas  Features.md  MAS Spec.xlsx  Mas.code-workspace  README.md  app.debug.bat  app.release.bat  app.release_debug.bat  build_engine.bat  build_engine.debug.bat  build_engine.release.bat  build_engine.release_debug.bat  build_project.bat  editor.bat
App/: Renderer.uf  icon.png.import  project.godot
Docs/: .editorconfig  AbstractionLevels.spec  AbstractionLevels.txt  Arch_Backend.md  Arch_Frontend.md  Architecture.md  BNF.md  Code.md  Language Model.md  Layer0 Stuff.txt  MAS Spec.md  MAS Spec.txt  Overview.md  Parsing.txt  Platform Toolchain.md  SNode Reference.md  Sector Lang.md  TimeDomains.md
Example/: ExampleFile.msc
Interpreter/: .clang-format  .editorconfig  .sconsign.dblite  CMakeLists.txt  Conanfile.txt  SConstruct  build.cmake.ps1  build.ps1  conanfile.py
Interpreter/Config/: Config.Build.h  Config.LAL.h  Config.TPAL.h
Interpreter/PAL/LAL/: LAL.C_STL.c  LAL.C_STL.h  LAL.Containers.h  LAL.Declarations.h  LAL.Exception.c  LAL.Exception.h  LAL.IO.c  LAL.IO.h  LAL.Limits.h  LAL.Memory.c  LAL.Memory.h  LAL.Platform.h  LAL.Reflection.h  LAL.String.c  LAL.String.h  LAL.Types.h  LAL.Unicode.h  LAL.h
Interpreter/PAL/OSAL/: OSAL.Entrypoint.c  OSAL.Platform.h  OSAL.h
Interpreter/PAL/TPAL/: TPAL.IO..c  TPAL.IO..h  TPAL.IO.stl.h  TPAL.IO.zlib.h  TPAL.IO.zpl.h  TPAL.Memory.c  TPAL.Memory.h  TPAL.Memory.zpl.h  TPAL.Platform.h  TPAL.String.c  TPAL.String.h  TPAL.String.zpl.c  TPAL.String.zpl.h  TPAL.Unicode.zpl.h
Interpreter/cmake/: dependencies.cmake
Interpreter/project/Compendium/: Context.h  Symbol.h
Interpreter/project/Core/: Core.h  Dev.Log.c  Dev.Log.h  Dev_Log.c  Execution.c
Interpreter/project/LAL/: LAL.C_STL.c  LAL.C_STL.h  LAL.Declarations.h  LAL.Exception.c  LAL.FundamentalLimits.h  LAL.IO.h  LAL.Memory.c  LAL.Memory.h  LAL.String.c  LAL.String.h  LAL.Types.h  LAL.h  LAL_Bit.h  LAL_C_STL.c  LAL_C_STL.h  LAL_Declarations.h  LAL_Exception.c  LAL_Exception.h  LAL_FundamentalLimits.h  LAL_FundamentalTypes.h  LAL_IO.c  LAL_IO.h  LAL_Memory.c  LAL_Memory.h  LAL_Platform.h  LAL_String.c  LAL_String.h  LAL_Types.h
Interpreter/project/Lexer/: Lexer.c  Lexer.h  ProtoLexer.c  ProtoLexer.h  ProtoTokens.c  ProtoTokens.h  TokenEntires.inline.macro  Tokens.c  Tokens.h
Interpreter/project/PAL/OSAL/: OSAL.API_Windows.h  OSAL.EntryPoint.h  OSAL.Entrypoint.c  OSAL.h  OSAL_API_Windows.h  OSAL_EntryPoint.h  OSAL_Entrypoint.c  OSAL_Platform.h
Interpreter/project/Parser/: AST.c  AST.h  Parser.c  Parser.h  Parser.mas.c  Parser.mas.h  Sector.h  Symbol.h  Visitor.c  Visitor.h
Interpreter/project/Shell/: Shell.c  Shell.h
Interpreter_A1/: .clang-format  .sconsign.dblite  SConstruct
MAS_Handler/: Cargo.toml  MAS Workspace.code-workspace
Mas_Handler_C/: Mas_Handler_C.sln
Prototype/: Example.docx  First.mcsource  First.pkspec  First_NoComments.mcsource
Tests/: 0.LX.Cradle.spec  (+12 more)
(+316 files in other folders)
